test/tooltest/effectgen/invalid/16_empty_range_attribute.params
struct [[ge::params(type=TEST_RANGE_INVALID, name="TestRangeInvalid")]] TestRangeInvalidParams {
    // Empty range attribute
    [[ge::prop("FIELD1X")]]
    [[ge::range()]]
    float field1 = 0.0f;
};
